--- a/OrderProcessing/OrderProcessing.Test/OrderProcessing.Test.csproj
+++ b/OrderProcessing/OrderProcessing.Test/OrderProcessing.Test.csproj
@@ -8,9 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OrderProcessing.Core\OrderProcessing.Core.csproj" />
+    <ProjectReference Include="..\OrderProcessing\OrderProcessing.csproj" />
   </ItemGroup>
 
 </Project>
